--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
       "@azure/keyvault-secrets": "^4.7.0"
     },
     "engines": {
-      "node": ">=18.0.0"
-    }
+    "node": "20.x"
+  }
   }
